--- a/tdse-tp2_03-model_integration.ioc
+++ b/tdse-tp2_03-model_integration.ioc
@@ -17,8 +17,9 @@ Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA14
 Mcu.Pin11=PB3
-Mcu.Pin12=PB5
-Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PD0-OSC_IN
 Mcu.Pin4=PD1-OSC_OUT
@@ -27,7 +28,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA10
 Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RBTx
@@ -86,6 +87,10 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-TRACESWO
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=LD3[Led externo/D5]
+PB4.Locked=true
+PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=B3[Boton 3 /D4]
 PB5.Locked=true
@@ -129,8 +134,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=tdse-tp2_02-model_integration.ioc
-ProjectManager.ProjectName=tdse-tp2_02-model_integration
+ProjectManager.ProjectFileName=tdse-tp2_03-model_integration.ioc
+ProjectManager.ProjectName=tdse-tp2_03-model_integration
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
