--- a/tdse-tp2_05-model_integration.ioc
+++ b/tdse-tp2_05-model_integration.ioc
@@ -46,8 +46,9 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA10.GPIOParameters=GPIO_Label
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=B2[Boton 2/D2]
+PA10.GPIO_PuPd=GPIO_PULLUP
 PA10.Locked=true
 PA10.Signal=GPXTI10
 PA13.GPIOParameters=GPIO_Label
@@ -91,8 +92,9 @@ PB4.GPIOParameters=GPIO_Label
 PB4.GPIO_Label=LD3[Led externo/D5]
 PB4.Locked=true
 PB4.Signal=GPIO_Output
-PB5.GPIOParameters=GPIO_Label
+PB5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB5.GPIO_Label=B3[Boton 3 /D4]
+PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
@@ -134,8 +136,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=tdse-tp2_03-model_integration.ioc
-ProjectManager.ProjectName=tdse-tp2_03-model_integration
+ProjectManager.ProjectFileName=tdse-tp2_05-model_integration.ioc
+ProjectManager.ProjectName=tdse-tp2_05-model_integration
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
